# tg-sender

./: .gitignore  README.md  pyproject.toml
tg_sender/: bot.py  file_storage.py  sender.py
